# 9n-mpc

./: .gitignore  DockerFile  LICENSE  README.md  nacos_init.sh  requirements.txt  隐私计算PSI标品部署操作文档.md
conf/DataJoin/: readme.md
conf/ResourceManager/: k8s.conf  readme.md
conf/Trainer/: README.md  leader.json
data/: data_B10W.csv
deploy/: readme.md
docs/: k8s_deploy.md  nfs_deploy.md  tutorial.md
docs/DataCenter/: distributer_install.md  distributer_install_chinese_version.md  simpleness_install.md  simpleness_install_chinese_version.md
docs/DataJoin/: distributer_install.md  distributer_install_chinese_version.md  simpleness_install.md  simpleness_install_chinese_version.md
docs/ResourceManager/: README.md
docs/prop/: application.properties  psi.properties
docs/sql/: coordinator_init.sql  mpc_init.sql  nacos_init.sql
docs/yamls/: coordinator_deployment.yaml  coordinator_k8s_cofigmap.yaml  coordinator_nacos_configmap.yaml  coordinator_service.yaml  fileservice_deployment.yaml  mysql_deployment.yaml  mysql_secret.yaml  mysql_service.yaml  nacos_configmap.yaml  nacos_deployment.yaml  nacos_service.yaml  proxy_cert_configmap.yaml  proxy_deployment.yaml  proxy_lua_configmap.yaml  proxy_mpc_conf_configmap.yaml  proxy_ngnix_conf_configmap.yaml  psi.yaml  redis_configmap.yaml  redis_deployment.yaml  redis_service.yaml
example/: README.md
example/data_join/: README.md  data_join_follower.sh  data_join_leader.sh  dist_data_join_follower.sh  dist_data_join_leader.sh  kill.sh  kill_pods.sh
src/PSI/crypto/: Cargo.toml  pyproject.toml
src/PSI/crypto/src/: curve.rs  hash.rs  hash_set.rs  lib.rs
src/PSI/link_py/: .bazelrc  BUILD.bazel  WORKSPACE  link_py.cc
(+401 files in other folders)
