# Copyright 2020 The 9nFL Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

pybind_extension(
    name = "link_py",
    srcs = ["link_py.cc"],
    deps = [
        "@yacl//yacl/link",
    ],
)

py_library(
    name = "lib_link_py",
    data = [
        ":link_py.so",
    ],
)

py_package(
    name = "link_py_package",
    deps = [":lib_link_py"],
)

py_wheel(
    name = "wheel",
    python_tag = "py3",
    version = "v0.1",
    distribution = "link_py",
    deps = [":link_py_package"]
)
